--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,15 +9,52 @@ body {
     font-family: 'alethia_proregular';
 }
 
+a {
+    text-decoration: none;
+    color: #000;
+}
+
 header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
+    .header__main-page-link {
+        font-size: 2rem;
+        padding: 20px 6px;
+    }
+
     .menu {
         display: flex;
         flex-direction: row;
-        justify-content: center;
         list-style: none;
+        gap: 10px;
+        flex-wrap: wrap;
+
+        .menu__link {
+            padding: 4px 20px;
+            font-size: 1.2rem;  
+            display: inline-block;
+        }
+
+        .menu__link:hover,
+        .menu__link:focus {
+            color: #408f75;
+        }
+
+        .menu__link::after {
+            display: block;
+            content: '';
+            padding-top: 4px;
+            border-bottom: 2px solid #408f75;
+            transition: transform 0.25s ease-in-out;
+            
+            transform: scaleX(0);
+        }
+
+        .menu__link:hover::after, 
+        .menu__link:focus::after {
+            transform: scaleX(1);
+        }
     }
 }
