--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -30,6 +31,7 @@ header {
         list-style: none;
         gap: 10px;
         flex-wrap: wrap;
+        padding-bottom: 6px;
 
         .menu__link {
             padding: 4px 20px;
@@ -56,6 +58,24 @@ header {
         .menu__link:hover::after, 
         .menu__link:focus::after {
             transform: scaleX(1);
+        }
+    }
+}
+
+main {
+    .photo-container {
+
+        padding: 14px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 14px;
+
+        .photo-container__item img {
+            max-width: 100%;
+            height: 100%;
+            object-fit: cover;
+            // padding: 8px;
+            
         }
     }
 }
