docs: create docs directory

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -202,12 +202,16 @@ a {
             grid-column-start: 1;
             grid-row-start: 3;
             justify-self: center;
+            align-self: center;
+            width: 150px;
         }
 
         .totoro-second {
             grid-column-start: 3;
             grid-row-start: 3;
             justify-self: center;
+            align-self: center;
+            width: 150px;
         }
     }
 
