--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -15,214 +15,6 @@ a {
     color: #000;
 }
 
-.temp-modal-window {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #000000f1;
-    z-index: 10;
-
-    .confetti {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        z-index: 100;
-        
-        .confetti-piece {
-            position: absolute;
-            width: 10px;
-            height: 30px;
-            background: #ffd300;
-            top: 0;
-            opacity: 0;
-        }
-        .confetti-piece:nth-child(1) {
-            left: 7%;
-            -webkit-transform: rotate(-40deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 182ms;
-            -webkit-animation-duration: 1116ms;
-        }
-        .confetti-piece:nth-child(2) {
-            left: 14%;
-            -webkit-transform: rotate(4deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 161ms;
-            -webkit-animation-duration: 1076ms;
-        }
-        .confetti-piece:nth-child(3) {
-            left: 21%;
-            -webkit-transform: rotate(-51deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 481ms;
-            -webkit-animation-duration: 1103ms;
-        }
-        .confetti-piece:nth-child(4) {
-            left: 28%;
-            -webkit-transform: rotate(61deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 334ms;
-            -webkit-animation-duration: 708ms;
-        }
-        .confetti-piece:nth-child(5) {
-            left: 35%;
-            -webkit-transform: rotate(-52deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 302ms;
-            -webkit-animation-duration: 776ms;
-        }
-        .confetti-piece:nth-child(6) {
-            left: 42%;
-            -webkit-transform: rotate(38deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 180ms;
-            -webkit-animation-duration: 1168ms;
-        }
-        .confetti-piece:nth-child(7) {
-            left: 49%;
-            -webkit-transform: rotate(11deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 395ms;
-            -webkit-animation-duration: 1200ms;
-        }
-        .confetti-piece:nth-child(8) {
-            left: 56%;
-            -webkit-transform: rotate(49deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 14ms;
-            -webkit-animation-duration: 887ms;
-        }
-        .confetti-piece:nth-child(9) {
-            left: 63%;
-            -webkit-transform: rotate(-72deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 149ms;
-            -webkit-animation-duration: 805ms;
-        }
-        .confetti-piece:nth-child(10) {
-            left: 70%;
-            -webkit-transform: rotate(10deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 351ms;
-            -webkit-animation-duration: 1059ms;
-        }
-        .confetti-piece:nth-child(11) {
-            left: 77%;
-            -webkit-transform: rotate(4deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 307ms;
-            -webkit-animation-duration: 1132ms;
-        }
-        .confetti-piece:nth-child(12) {
-            left: 84%;
-            -webkit-transform: rotate(42deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 464ms;
-            -webkit-animation-duration: 776ms;
-        }
-        .confetti-piece:nth-child(13) {
-            left: 91%;
-            -webkit-transform: rotate(-72deg);
-            -webkit-animation: makeItRain 1000ms infinite ease-out;
-            -webkit-animation-delay: 429ms;
-            -webkit-animation-duration: 818ms;
-        }
-        .confetti-piece:nth-child(odd) {
-            background: #7431e8;
-        }
-        .confetti-piece:nth-child(even) {
-            z-index: 1;
-        }
-        .confetti-piece:nth-child(4n) {
-            width: 5px;
-            height: 12px;
-            -webkit-animation-duration: 2000ms;
-        }
-        .confetti-piece:nth-child(3n) {
-            width: 3px;
-            height: 10px;
-            -webkit-animation-duration: 2500ms;
-            -webkit-animation-delay: 1000ms;
-        }
-        .confetti-piece:nth-child(4n-7) {
-          background: red;
-        }
-        @-webkit-keyframes makeItRain {
-            from {opacity: 0;}
-            50% {opacity: 1;}
-            to {-webkit-transform: translateY(350px);}
-        }
-    }
-
-    .temp-modal-window__img {
-        padding: 20px;
-        display: grid;
-        grid-template-columns:repeat(3, 1fr);
-        grid-template-rows: minmax(400px);
-        gap: 10px;
-
-        .cats-gif {
-            width: 400px;
-            grid-column-start: 3;
-            grid-row-start: 1;
-        }
-
-        .p-1 {
-            grid-row-start: 2;
-            grid-column-start: 1;
-        }
-
-        .p-2 {
-            grid-row-start: 2;
-            grid-column-start: 3;
-        }
-
-        .p-3 {
-            grid-row-start: 3;
-            font-size: 40px;
-        }
-  
-        .happy-img {
-            width: 400px;
-            z-index: 1000;
-            grid-row-start: 1;
-            grid-row-end: 3;
-            grid-column-start: 2;
-            grid-column-end: 3;
-            justify-self: center;
-        }
-
-        .totoro-first {
-            grid-column-start: 1;
-            grid-row-start: 3;
-            justify-self: center;
-            align-self: center;
-            width: 150px;
-        }
-
-        .totoro-second {
-            grid-column-start: 3;
-            grid-row-start: 3;
-            justify-self: center;
-            align-self: center;
-            width: 150px;
-        }
-    }
-
-    .temp-modal-window__img p {
-        color: #fff;
-        font-size: 70px;
-        text-align: center;
-    }
-
-}
-
 header {
     display: flex;
     flex-direction: column;
@@ -244,6 +36,7 @@ header {
         .menu__link {
             padding: 4px 20px;
             font-size: 1.2rem;  
+            text-transform: uppercase;
             display: inline-block;
         }
 
@@ -278,12 +71,56 @@ main {
         grid-template-columns: repeat(3, 1fr);
         gap: 14px;
 
+        .photo-container__item {  
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            
+            .photo-container__hover-overlay {
+                position: absolute;
+                width: 5%;
+                height: 90%;
+                background-color: #fff;
+                display: grid;
+                place-content: center;
+                gap: 12px;
+                color: #151e3f;
+                text-transform: uppercase;
+                opacity: 0;
+                transition: all 0.9s ease;
+
+                p {
+                    text-align: center;
+                    font-size: 3vw;
+                    letter-spacing: 1px;
+                    transform: scaleX(0.1);
+                    transition: all 0.9s ease;
+                }
+
+                .collection-year {
+                    font-size: 1.4vw;
+                    color: #151e3fad;
+                }
+            }
+
+        }
+        
+        .photo-container__item:hover .photo-container__hover-overlay {
+            opacity: 80%;
+            width: 90%;
+            transition: all 0.5s ease;
+
+            p {
+                transform: scaleX(1);
+                transition: all 0.8s ease;
+            }
+        }
+
         .photo-container__item img {
             max-width: 100%;
             height: 100%;
-            object-fit: cover;
-            // padding: 8px;
-            
+            object-fit: cover;  
         }
     }
 }
