--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -22,7 +22,8 @@ header {
 
     .header__main-page-link {
         font-size: 2rem;
-        padding: 20px 6px;
+        padding: 30px 6px;
+        letter-spacing: 3px;
     }
 
     .menu {
@@ -32,6 +33,7 @@ header {
         gap: 10px;
         flex-wrap: wrap;
         padding-bottom: 6px;
+        letter-spacing: 2px;
 
         .menu__link {
             padding: 4px 20px;
@@ -41,7 +43,7 @@ header {
         }
 
         .menu__link:hover,
-        .menu__link:focus {
+        .menu__link:active {
             color: #408f75;
             transition: all 0.25s ease-in-out;
         }
@@ -57,7 +59,7 @@ header {
         }
 
         .menu__link:hover::after, 
-        .menu__link:focus::after {
+        .menu__link:active::after {
             transform: scaleX(1);
         }
     }
@@ -139,10 +141,17 @@ footer {
 
         .links__icon {
             padding: 0 4px;
+            transform: scale(1);
+            transition: transform 0.4s ease-in-out;
         }
 
         .links__icon img {
             height: 32px;
         }
+        
+        .links__icon:hover {
+            transform: scale(1.5);
+        }
     }
+
 }
