feat: change Main page gallery grid

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -73,6 +73,12 @@ main {
         grid-template-columns: repeat(3, 1fr);
         gap: 14px;
 
+        .photo-container__column {
+            display: flex;
+            flex-direction: column;
+            gap: 14px;
+        }
+
         .photo-container__item {  
             position: relative;
             display: flex;
